--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -94,3 +94,24 @@ jobs:
           composer update
       - name: Phan
         run: ./vendor/bin/phan -d extensions/${{ env.EXTNAME }} --minimum-target-php-version=8.1 --long-progress-bar
+
+  test:
+    name: PHPUnit
+    runs-on: ubuntu-latest
+    env:
+      MW_INSTALL_PATH: ${{ github.workspace }}/mediawiki
+    strategy:
+      fail-fast: false
+      matrix:
+        php: [ '8.1' ]
+        mediawiki: [ REL1_43 ]
+    steps:
+      - name: Setup Extension
+        uses: actions/checkout@v3
+      - name: Mediawiki PHPUnit
+        uses: wikiteq/mediawiki-phpunit-action@master
+        with:
+          type: extension
+          php: ${{ matrix.php }}
+          mwbranch: ${{ matrix.mediawiki }}
+          extension: ${{ env.EXTNAME }}
