--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,46 +13,9 @@ env:
 jobs:
   style:
     name: Code Style
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ ubuntu-latest ]
-        php: [ '8.1' ]
-        mediawiki: [ REL1_43 ]
+    runs-on: ubuntu-latest
     steps:
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: ${{ matrix.php }}
-          extensions: mbstring, intl
-          coverage: none
-          tools: composer
-      - name: Setup MediaWiki
-        uses: actions/checkout@v4
-        with:
-          repository: wikimedia/mediawiki
-          ref: ${{ matrix.mediawiki }}
-      - name: Setup VisualEditor
-        uses: actions/checkout@v4
-        with:
-          repository: wikimedia/mediawiki-extensions-VisualEditor
-          ref: ${{ matrix.mediawiki }}
-          path: extensions/VisualEditor
-          submodules: true
-      - name: Setup Extension
-        uses: actions/checkout@v4
-        with:
-          path: extensions/${{ env.EXTNAME }}
-      - name: Setup Composer
-        run: |
-          echo '{"extra":{"merge-plugin":{"include":["extensions/*/composer.json","skins/*/composer.json"]}}}' > composer.local.json
-          composer update
-          composer update
-      - name: Lint
-        run: ./vendor/bin/parallel-lint --exclude node_modules --exclude vendor extensions/${{ env.EXTNAME }}
-      - name: PHP Code Sniffer
-        run: ./vendor/bin/phpcs -sp --standard=vendor/mediawiki/mediawiki-codesniffer/MediaWiki extensions/${{ env.EXTNAME }}
+      - uses: wikiteq/php-lint-action@main
 
   security:
     name: Static Analysis
