--- a/.gitignore
+++ b/.gitignore
@@ -74,6 +74,7 @@ fabric.properties
 .idea/caches/build_file_checksums.ser
 
 composer.phar
+composer.lock
 /vendor/
 
 # Commit your application's lock file https://getcomposer.org/doc/01-basic-usage.md#commit-your-composer-lock-file-to-version-control
